Fix menu error - navbar covering menu and not clickable at high resolution

--- a/css/style.css
+++ b/css/style.css
@@ -61,8 +61,8 @@ Black: #0C0C0C
 
 .navbar-brand {
     position: absolute;
-    width: 60%;
-    left: 20%;
+    width: 30%;
+    left: 35%;
     top: 0;
     text-align: center;
     margin: auto;
@@ -70,8 +70,13 @@ Black: #0C0C0C
     font-size: 32px;
 }
 
+.navbar-default .navbar-nav > li > a:hover {
+    color: #EFEFEF;
+    background-color: #FF9440;
+}
 
 @media (max-width: 768px) {
+
     #full-toggle-button {
         display: none;
     }
@@ -102,10 +107,18 @@ Black: #0C0C0C
     #full-toggle-button {
     display: inline;
 }
-
+    .navbar-brand {
+        width: 60%;
+        left: 20%;
+    }
 
 }
-
+@media(min-width: 1000px) {
+    .navbar-brand {
+        width: 30%;
+        left: 35%;
+    }
+}
 
 .navbar-header 
 {
